test-output.txt
node : file:///T:/zijie/4/full-flow-test.mjs:551
所在位置 行:1 字符: 5
+ & { node full-flow-test.mjs 2>&1 | Out-File -Encoding utf8 te
st-outpu ...
+     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (file:///T:/ziji.. 
   .ow-test.mjs:551:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
      data.by_course_type.forEach((c: any) => {
                                    ^

SyntaxError: Unexpected token ':'
    at compileSourceTextModule (node:internal/modules/esm/utils
:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/t
ranslators:90:18)
    at #translate (node:internal/modules/esm/loader:435:20)
    at afterLoad (node:internal/modules/esm/loader:491:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm
/loader:496:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules
/esm/loader:549:36)
    at afterResolve (node:internal/modules/esm/loader:597:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules
/esm/loader:603:12)
    at node:internal/modules/esm/loader:622:32
    at TracingChannel.tracePromise (node:diagnostics_channel:36
2:14)

Node.js v24.16.0
